[Bugfix] Flickering background fix;

--- a/src/app/parts/bottom-content.css
+++ b/src/app/parts/bottom-content.css
@@ -1,4 +1,5 @@
 .bottom-content {
+    margin-top: 30px;
     background-color: rgba(0, 0, 0, 0.55);
     width: 100%;
     display: flex;
