--- a/src/app/parts/heading.css
+++ b/src/app/parts/heading.css
@@ -10,6 +10,7 @@
 .heading-title {
     font-family: 'Bebas Neue', cursive;
     font-size: 58px;
+    line-height: 60px;
 }
 
 .red {
