--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -6,14 +10,20 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
-  background: url("./assets/images/background.jpg") no-repeat top center fixed;
-  background-size: cover;
-}
-
-html {
-  height: 100%;
 }
 
 #root {
   height: 100%;
+}
+
+.background-image {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-image: url('./assets/images/background.jpg');
+  background-size: cover;
+  background-position-x: center;
+  z-index: -1;
 }
